html basic assignment
first html assignment with html and css

--- a/cookie_recipe/index_1.html
+++ b/cookie_recipe/index_1.html
@@ -1,2 +1,45 @@
 ﻿<!DOCTYPE html>
+
+<html>
+
+<head>
+
+<link type="text/css" rel="stylesheet" href="style.css">
+
 </head>
+
+
+<body>
+
+<h1>The Best Chocolate Chip Cookies</h1>
+<h2>Recipe by: My Grandma</h2>
+<h3>Time: 45 Min</h3>
+
+<img src="///Users/luigimazzel/Desktop/FEWD/ASSIGNMENT/021318_assignment_luigimazzel_repo/cookie_recipe/cookies.jpg"/>
+
+<p>INGREDIENTS:</p>
+<p>1 1/2 cup (3 sticks) softened butter, 1 cup brown sugar, 1 cup granulated sugar, 1 Tbl vanilla instant pudding powder, 2 Tbl milk, 2 Tbl vanilla extract, 2 eggs, 4 cups all purpose flour, 2 tsp baking soda, 1/2 tsp salt, 4 cups chocolate chips, 1 cup chopped walnuts or pecans(optional)
+</p>
+
+<p>How to make Mama’s Recipe:</p>
+<ol> 
+	<li>TPreheat oven to 350 degrees Beat butter and sugars together until light and fluffy.</li> 
+	<li>Stir in pudding mix milk and vanilla extract.</li> 
+	<li>Beat in eggs.</li> 
+	<li>Add dry ingredients and stir until combined.</li>
+    <li>Stir in chocolate chips and nuts.</li> 
+    <li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.</li>
+    <li>Bake 8-10 minutes or until golden brown.</li>
+</ol>
+
+<p>Nutrition Information:</p>
+
+<p>Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom</p>
+
+<p2>Related Recipes</p2> <a href="http://www.opensourcefood.com/people/Amanori/recipes/mamas-recipe-the-best-chocolate-chip-cookies">Open Source Food</a>
+
+
+
+
+</body>
+</html>
